[gd_scene load_steps=36 format=3 uid="uid://bomr6q155glwb"]

[ext_resource type="Script" path="res://scripts/main_character.gd" id="1_7ido0"]
[ext_resource type="PackedScene" uid="uid://c0ijrjfvy4gdd" path="res://scenes/UI/amunition_display.tscn" id="2_3kkai"]
[ext_resource type="Texture2D" uid="uid://bcqny3j5w4m0u" path="res://assets/reloading.png" id="3_h67ma"]
[ext_resource type="Script" path="res://scripts/helath.gd" id="4_m2lyv"]
[ext_resource type="Texture2D" uid="uid://0myt0r7n4k6b" path="res://assets/Main_Character/mainChar_Idle1.png" id="5_bnb6b"]
[ext_resource type="Texture2D" uid="uid://blgcp5wp6r0cg" path="res://assets/Main_Character/mainChar_Roll_Backwards.png" id="6_0eic6"]
[ext_resource type="Texture2D" uid="uid://bk86ob5to60id" path="res://assets/Main_Character/mainChar_Run1.png" id="7_wo5p8"]
[ext_resource type="Script" path="res://scripts/Hurt_Box.gd" id="8_agrf6"]
[ext_resource type="Script" path="res://scripts/loot_graber.gd" id="9_mwy66"]
[ext_resource type="Texture2D" uid="uid://dbppvb1iginaw" path="res://light.png" id="10_wu7gu"]
[ext_resource type="PackedScene" uid="uid://dnxho7cy1trse" path="res://scenes/HUD.tscn" id="11_tex4u"]
[ext_resource type="Script" path="res://scripts/Upgrade_Manager.gd" id="12_wlg11"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hoqsq"]
atlas = ExtResource("3_h67ma")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq7w4"]
atlas = ExtResource("3_h67ma")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5apx"]
atlas = ExtResource("3_h67ma")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps657"]
atlas = ExtResource("3_h67ma")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3qujg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoqsq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoqsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq7w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5apx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps657")
}],
"loop": true,
"name": &"reload",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gvqqx"]
atlas = ExtResource("5_bnb6b")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_120du"]
atlas = ExtResource("5_bnb6b")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8xjn"]
atlas = ExtResource("6_0eic6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f7ni"]
atlas = ExtResource("6_0eic6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuot1"]
atlas = ExtResource("6_0eic6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sig4v"]
atlas = ExtResource("6_0eic6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig5ir"]
atlas = ExtResource("6_0eic6")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e18sr"]
atlas = ExtResource("6_0eic6")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpi7v"]
atlas = ExtResource("6_0eic6")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_anak3"]
atlas = ExtResource("7_wo5p8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_akgcr"]
atlas = ExtResource("7_wo5p8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_siqgy"]
atlas = ExtResource("7_wo5p8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_usl47"]
atlas = ExtResource("7_wo5p8")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_83ofa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvqqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_120du")
}],
"loop": true,
"name": &"idle",
"speed": 2.1
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8xjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f7ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuot1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sig4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig5ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e18sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpi7v")
}],
"loop": true,
"name": &"roll",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anak3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akgcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usl47")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p12sy"]
radius = 4.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ldjj"]
radius = 5.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hcvld"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_efmvt"]
radius = 17.0

[node name="Hero" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 9
collision_mask = 9
script = ExtResource("1_7ido0")

[node name="TextureProgressBar" parent="." instance=ExtResource("2_3kkai")]

[node name="Reload_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_3qujg")

[node name="LifeState" type="Node2D" parent="."]
script = ExtResource("4_m2lyv")
debug_health = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_83ofa")
animation = &"roll"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_p12sy")

[node name="Center" type="Node2D" parent="."]

[node name="Hurt_Box" type="Area2D" parent="." node_paths=PackedStringArray("damage_taker")]
script = ExtResource("8_agrf6")
damage_taker = NodePath("../LifeState")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_Box"]
shape = SubResource("CapsuleShape2D_4ldjj")

[node name="loot_grabber" type="Area2D" parent="."]
script = ExtResource("9_mwy66")

[node name="CollisionShape2D" type="CollisionShape2D" parent="loot_grabber"]
shape = SubResource("CircleShape2D_hcvld")

[node name="PointLight2D" type="PointLight2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -2)
shadow_enabled = true
shadow_filter_smooth = 50.0
texture = ExtResource("10_wu7gu")
texture_scale = 0.6

[node name="HUD" parent="." node_paths=PackedStringArray("upgrade_manager", "life") instance=ExtResource("11_tex4u")]
upgrade_manager = NodePath("../Upgrade_Manager")
life = NodePath("../LifeState")

[node name="Upgrade_Manager" type="Area2D" parent="." node_paths=PackedStringArray("amo_bar")]
script = ExtResource("12_wlg11")
amo_bar = NodePath("../TextureProgressBar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Upgrade_Manager"]
shape = SubResource("CircleShape2D_efmvt")
